Fix overflowing related links on certain breakpoints

--- a/components/section/main.scss
+++ b/components/section/main.scss
@@ -95,7 +95,7 @@
 
 .column {
 	@include displayFlex;
-	flex-flow: column wrap;
+	flex-flow: column;
 
 	&[data-o-grid-colspan~="hide"] {
 		@include oGridRespondTo($until: S) {
